# social-creator-collector

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  MAINTAINING.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: discovery-finding.yml
.github/workflows/: tests.yml
collector/: __init__.py  bilibili.py  browser.py  cli.py  douyin.py  paths.py  schema.py
docs/: INSTALL.md
example-credentials/: bilibili.credentials.example.json  douyin.cookies.example.json  douyin.credentials.example.json
schemas/: collector-output.schema.json
scripts/: collect_comments.py  collect_danmaku.py  collect_douyin_comments.py  social_creator_collect.py
skills/bilibili-creator-data/: SKILL.md
skills/comment-analytics/: SKILL.md
skills/danmaku-analytics/: SKILL.md
skills/feedback-analytics/: SKILL.md
skills/social-creator-data/: SKILL.md
social/: requirements.txt
social/common/schemas/: collector-output.schema.json
social/common/scripts/backends/: bilibili.py  douyin.py
social/common/tests/: test_collect.py
tests/: test_collector.py
